--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
+safe: true
+lsi: false
+pygments: true
+
+kramdown:
+  input: GFM
+
 # The following configuration items need set up specifically for your site
 #
 # name - This is the site name. The site name is used in the title of
